--- a/notebooks/airbnb_data_analysis.ipynb
+++ b/notebooks/airbnb_data_analysis.ipynb
@@ -5428,6 +5428,381 @@
     "print(\"- Implemented PCA-based outlier detection\")\n",
     "print(\"- Assessed PCA transformation quality and stability\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 14. Linear Discriminant Analysis (LDA)\n",
+    "Supervised dimensionality reduction for classification with discriminant analysis and class separation optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TOPIC: Linear Discriminant Analysis (LDA)\n",
+    "print(\"COMPREHENSIVE LINEAR DISCRIMINANT ANALYSIS (LDA)\")\n",
+    "print(\"=\" * 55)\n",
+    "\n",
+    "# Import LDA from sklearn\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "\n",
+    "# Use price categories from previous sections for supervised dimensionality reduction\n",
+    "print(f\"Using price categories for supervised dimensionality reduction\")\n",
+    "print(f\"Feature matrix shape: {X_scaled.shape}\")\n",
+    "print(f\"Target classes: {sorted(df_clustered['price_category'].unique()) if 'price_category' in df_clustered.columns else 'Creating price categories...'}\")\n",
+    "\n",
+    "# 1. Create Price Categories for LDA (if not already created)\n",
+    "print(\"\\n1. PREPARING TARGET CLASSES FOR LDA\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "if 'price_category' not in df_clustered.columns:\n",
+    "    # Create price categories based on quantiles\n",
+    "    price_quantiles = df_clustered['price'].quantile([0.33, 0.67])\n",
+    "    low_threshold = price_quantiles[0.33]\n",
+    "    high_threshold = price_quantiles[0.67]\n",
+    "    \n",
+    "    def categorize_price(price):\n",
+    "        if price < low_threshold:\n",
+    "            return 0  # Low\n",
+    "        elif price < high_threshold:\n",
+    "            return 1  # Medium\n",
+    "        else:\n",
+    "            return 2  # High\n",
+    "    \n",
+    "    df_clustered['price_category'] = df_clustered['price'].apply(categorize_price)\n",
+    "    print(f\"Created price categories with thresholds: Low < ${low_threshold:.2f}, Medium < ${high_threshold:.2f}, High >= ${high_threshold:.2f}\")\n",
+    "\n",
+    "# Get target variable\n",
+    "y_lda = df_clustered['price_category'].copy()\n",
+    "category_labels = ['Low', 'Medium', 'High']\n",
+    "\n",
+    "# Display class distribution\n",
+    "class_distribution = y_lda.value_counts().sort_index()\n",
+    "print(f\"\\nClass distribution for LDA:\")\n",
+    "for class_id, count in class_distribution.items():\n",
+    "    percentage = (count / len(y_lda)) * 100\n",
+    "    print(f\"   {category_labels[class_id]}: {count:,} samples ({percentage:.2f}%)\")\n",
+    "\n",
+    "# 2. Apply Linear Discriminant Analysis\n",
+    "print(\"\\n2. APPLYING LINEAR DISCRIMINANT ANALYSIS\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Determine number of LDA components (max is n_classes - 1)\n",
+    "n_classes = len(class_distribution)\n",
+    "n_components_lda = min(n_classes - 1, X_scaled.shape[1])\n",
+    "\n",
+    "print(f\"Number of classes: {n_classes}\")\n",
+    "print(f\"Maximum LDA components: {n_components_lda}\")\n",
+    "\n",
+    "# Fit LDA\n",
+    "lda = LinearDiscriminantAnalysis(n_components=n_components_lda)\n",
+    "X_lda = lda.fit_transform(X_scaled, y_lda)\n",
+    "\n",
+    "# Create DataFrame with LDA components\n",
+    "lda_columns = [f'LD{i+1}' for i in range(n_components_lda)]\n",
+    "X_lda_df = pd.DataFrame(X_lda, columns=lda_columns, index=X_scaled.index)\n",
+    "\n",
+    "print(f\"\\nLDA Transformation Results:\")\n",
+    "print(f\"   Original dimensions: {X_scaled.shape}\")\n",
+    "print(f\"   LDA dimensions: {X_lda_df.shape}\")\n",
+    "print(f\"   Dimensionality reduction: {X_scaled.shape[1] - X_lda_df.shape[1]} features removed\")\n",
+    "\n",
+    "# Calculate explained variance ratio for LDA\n",
+    "lda_explained_variance_ratio = lda.explained_variance_ratio_\n",
+    "lda_cumulative_variance = np.cumsum(lda_explained_variance_ratio)\n",
+    "\n",
+    "print(f\"\\nLDA Explained Variance:\")\n",
+    "for i, (component, variance) in enumerate(zip(lda_columns, lda_explained_variance_ratio)):\n",
+    "    print(f\"   {component}: {variance:.4f} ({variance*100:.2f}%)\")\n",
+    "print(f\"   Total variance explained: {lda_cumulative_variance[-1]:.4f} ({lda_cumulative_variance[-1]*100:.2f}%)\")\n",
+    "\n",
+    "# Display first few rows of transformed data\n",
+    "print(f\"\\nFirst 5 rows of LDA-transformed data:\")\n",
+    "display(X_lda_df.head())\n",
+    "\n",
+    "# 3. LDA vs PCA Comparison\n",
+    "print(\"\\n3. LDA VS PCA COMPARISON\")\n",
+    "print(\"=\" * 30)\n",
+    "\n",
+    "# Compare dimensionality reduction approaches\n",
+    "comparison_df = pd.DataFrame({\n",
+    "    'Method': ['PCA', 'LDA'],\n",
+    "    'Type': ['Unsupervised', 'Supervised'],\n",
+    "    'Components': [n_components_optimal, n_components_lda],\n",
+    "    'Variance_Explained': [f\"{cumulative_variance_ratio[n_components_optimal-1]*100:.2f}%\", \n",
+    "                          f\"{lda_cumulative_variance[-1]*100:.2f}%\"],\n",
+    "    'Objective': ['Maximize variance', 'Maximize class separation']\n",
+    "})\n",
+    "\n",
+    "print(f\"\\nPCA vs LDA Comparison:\")\n",
+    "display(comparison_df)\n",
+    "\n",
+    "# 4. LDA Visualization and Analysis\n",
+    "print(\"\\n4. LDA VISUALIZATION AND ANALYSIS\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Create comprehensive LDA visualization dashboard\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+    "fig.suptitle('Linear Discriminant Analysis Dashboard', fontsize=16, fontweight='bold')\n",
+    "\n",
+    "# 4.1 LDA scatter plot colored by true classes\n",
+    "class_colors = ['red', 'green', 'blue']\n",
+    "for class_id in range(n_classes):\n",
+    "    class_mask = y_lda == class_id\n",
+    "    class_data = X_lda_df[class_mask]\n",
+    "    \n",
+    "    if n_components_lda >= 2:\n",
+    "        axes[0,0].scatter(class_data['LD1'], class_data['LD2'], \n",
+    "                         c=class_colors[class_id], label=category_labels[class_id], \n",
+    "                         alpha=0.6, s=30)\n",
+    "    else:\n",
+    "        axes[0,0].scatter(class_data['LD1'], np.zeros(len(class_data)), \n",
+    "                         c=class_colors[class_id], label=category_labels[class_id], \n",
+    "                         alpha=0.6, s=30)\n",
+    "\n",
+    "axes[0,0].set_title('LDA: Class Separation')\n",
+    "axes[0,0].set_xlabel(f'LD1 ({lda_explained_variance_ratio[0]*100:.1f}% variance)')\n",
+    "if n_components_lda >= 2:\n",
+    "    axes[0,0].set_ylabel(f'LD2 ({lda_explained_variance_ratio[1]*100:.1f}% variance)')\n",
+    "else:\n",
+    "    axes[0,0].set_ylabel('Constant (0)')\n",
+    "axes[0,0].legend()\n",
+    "axes[0,0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.2 LDA vs PCA comparison plot\n",
+    "if n_components_lda >= 1 and n_components_optimal >= 2:\n",
+    "    scatter = axes[0,1].scatter(X_pca_df['PC1'], X_lda_df['LD1'], \n",
+    "                               c=y_lda, cmap='viridis', alpha=0.6, s=30)\n",
+    "    axes[0,1].set_title('PCA vs LDA Comparison')\n",
+    "    axes[0,1].set_xlabel(f'PC1 ({explained_variance_ratio[0]*100:.1f}% variance)')\n",
+    "    axes[0,1].set_ylabel(f'LD1 ({lda_explained_variance_ratio[0]*100:.1f}% variance)')\n",
+    "    plt.colorbar(scatter, ax=axes[0,1], label='Price Category')\n",
+    "    axes[0,1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.3 LDA explained variance\n",
+    "axes[0,2].bar(range(1, n_components_lda + 1), lda_explained_variance_ratio, \n",
+    "             alpha=0.7, color='orange')\n",
+    "axes[0,2].set_title('LDA Explained Variance by Component')\n",
+    "axes[0,2].set_xlabel('Linear Discriminant')\n",
+    "axes[0,2].set_ylabel('Explained Variance Ratio')\n",
+    "axes[0,2].set_xticks(range(1, n_components_lda + 1))\n",
+    "axes[0,2].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.4 LD1 distribution by class\n",
+    "for class_id in range(n_classes):\n",
+    "    class_mask = y_lda == class_id\n",
+    "    class_ld1 = X_lda_df.loc[class_mask, 'LD1']\n",
+    "    axes[1,0].hist(class_ld1, bins=20, alpha=0.6, \n",
+    "                  color=class_colors[class_id], label=category_labels[class_id])\n",
+    "\n",
+    "axes[1,0].set_title('LD1 Distribution by Class')\n",
+    "axes[1,0].set_xlabel('LD1 Values')\n",
+    "axes[1,0].set_ylabel('Frequency')\n",
+    "axes[1,0].legend()\n",
+    "axes[1,0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.5 Class centroids in LDA space\n",
+    "class_centroids_lda = X_lda_df.groupby(y_lda).mean()\n",
+    "if n_components_lda >= 2:\n",
+    "    axes[1,1].scatter(class_centroids_lda['LD1'], class_centroids_lda['LD2'], \n",
+    "                     c=class_colors[:n_classes], s=200, marker='X', \n",
+    "                     edgecolors='black', linewidth=2)\n",
+    "    \n",
+    "    for i, (class_id, centroid) in enumerate(class_centroids_lda.iterrows()):\n",
+    "        axes[1,1].annotate(category_labels[class_id], \n",
+    "                          (centroid['LD1'], centroid['LD2']),\n",
+    "                          xytext=(5, 5), textcoords='offset points',\n",
+    "                          fontsize=12, fontweight='bold')\n",
+    "    \n",
+    "    axes[1,1].set_title('Class Centroids in LDA Space')\n",
+    "    axes[1,1].set_xlabel(f'LD1 ({lda_explained_variance_ratio[0]*100:.1f}% variance)')\n",
+    "    axes[1,1].set_ylabel(f'LD2 ({lda_explained_variance_ratio[1]*100:.1f}% variance)')\n",
+    "else:\n",
+    "    axes[1,1].scatter(class_centroids_lda['LD1'], np.zeros(len(class_centroids_lda)), \n",
+    "                     c=class_colors[:n_classes], s=200, marker='X', \n",
+    "                     edgecolors='black', linewidth=2)\n",
+    "    axes[1,1].set_title('Class Centroids in LD1')\n",
+    "    axes[1,1].set_xlabel(f'LD1 ({lda_explained_variance_ratio[0]*100:.1f}% variance)')\n",
+    "    axes[1,1].set_ylabel('Constant (0)')\n",
+    "\n",
+    "axes[1,1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.6 Feature importance in LDA\n",
+    "# Get LDA coefficients (scalings)\n",
+    "lda_scalings = lda.scalings_\n",
+    "feature_importance_lda = np.abs(lda_scalings[:, 0])  # Use first discriminant\n",
+    "feature_names = X_scaled.columns\n",
+    "\n",
+    "# Sort features by importance\n",
+    "importance_indices = np.argsort(feature_importance_lda)[::-1]\n",
+    "top_features_lda = feature_names[importance_indices[:10]]\n",
+    "top_importance_lda = feature_importance_lda[importance_indices[:10]]\n",
+    "\n",
+    "axes[1,2].barh(range(len(top_features_lda)), top_importance_lda, color='steelblue', alpha=0.7)\n",
+    "axes[1,2].set_yticks(range(len(top_features_lda)))\n",
+    "axes[1,2].set_yticklabels(top_features_lda)\n",
+    "axes[1,2].set_title('Top 10 Features in LD1')\n",
+    "axes[1,2].set_xlabel('Absolute Coefficient Value')\n",
+    "axes[1,2].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 5. Class Separation Analysis\n",
+    "print(\"\\n5. CLASS SEPARATION ANALYSIS\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "# Calculate class separation metrics\n",
+    "class_means_lda = X_lda_df.groupby(y_lda).mean()\n",
+    "overall_mean_lda = X_lda_df.mean()\n",
+    "\n",
+    "print(f\"\\nClass Centroids in LDA Space:\")\n",
+    "display(class_means_lda.round(4))\n",
+    "\n",
+    "# Calculate between-class distances\n",
+    "from scipy.spatial.distance import pdist, squareform\n",
+    "class_distances_lda = pdist(class_means_lda.values)\n",
+    "distance_matrix_lda = squareform(class_distances_lda)\n",
+    "\n",
+    "distance_df_lda = pd.DataFrame(distance_matrix_lda,\n",
+    "                              index=[f'{label} Price' for label in category_labels],\n",
+    "                              columns=[f'{label} Price' for label in category_labels])\n",
+    "\n",
+    "print(f\"\\nBetween-Class Distances in LDA Space:\")\n",
+    "display(distance_df_lda.round(4))\n",
+    "\n",
+    "# Calculate within-class scatter\n",
+    "within_class_scatter = 0\n",
+    "for class_id in range(n_classes):\n",
+    "    class_mask = y_lda == class_id\n",
+    "    class_data = X_lda_df[class_mask]\n",
+    "    class_mean = class_data.mean()\n",
+    "    \n",
+    "    # Calculate scatter for this class\n",
+    "    class_scatter = np.sum((class_data - class_mean)**2)\n",
+    "    within_class_scatter += class_scatter\n",
+    "\n",
+    "# Calculate between-class scatter\n",
+    "between_class_scatter = 0\n",
+    "for class_id in range(n_classes):\n",
+    "    class_mask = y_lda == class_id\n",
+    "    class_count = np.sum(class_mask)\n",
+    "    class_mean = X_lda_df[class_mask].mean()\n",
+    "    \n",
+    "    # Calculate scatter between this class and overall mean\n",
+    "    scatter = class_count * np.sum((class_mean - overall_mean_lda)**2)\n",
+    "    between_class_scatter += scatter\n",
+    "\n",
+    "# Fisher's criterion (between-class / within-class scatter)\n",
+    "fishers_criterion = between_class_scatter / within_class_scatter if within_class_scatter > 0 else float('inf')\n",
+    "\n",
+    "print(f\"\\nClass Separation Metrics:\")\n",
+    "print(f\"   Within-class scatter: {within_class_scatter:.4f}\")\n",
+    "print(f\"   Between-class scatter: {between_class_scatter:.4f}\")\n",
+    "print(f\"   Fisher's criterion: {fishers_criterion:.4f}\")\n",
+    "print(f\"   Average between-class distance: {np.mean(class_distances_lda):.4f}\")\n",
+    "print(f\"   Max between-class distance: {np.max(class_distances_lda):.4f}\")\n",
+    "print(f\"   Min between-class distance: {np.min(class_distances_lda[class_distances_lda > 0]):.4f}\")\n",
+    "\n",
+    "# 6. LDA Classification Performance\n",
+    "print(\"\\n6. LDA CLASSIFICATION PERFORMANCE\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Split data for classification evaluation\n",
+    "X_train_lda, X_test_lda, y_train_lda, y_test_lda = train_test_split(\n",
+    "    X_scaled, y_lda, test_size=0.2, random_state=42, stratify=y_lda\n",
+    ")\n",
+    "\n",
+    "# Fit LDA classifier\n",
+    "lda_classifier = LinearDiscriminantAnalysis()\n",
+    "lda_classifier.fit(X_train_lda, y_train_lda)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_lda = lda_classifier.predict(X_test_lda)\n",
+    "y_pred_proba_lda = lda_classifier.predict_proba(X_test_lda)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy_lda = accuracy_score(y_test_lda, y_pred_lda)\n",
+    "print(f\"\\nLDA Classification Results:\")\n",
+    "print(f\"   Test Accuracy: {accuracy_lda:.4f} ({accuracy_lda*100:.2f}%)\")\n",
+    "\n",
+    "# Detailed classification report\n",
+    "class_report_lda = classification_report(y_test_lda, y_pred_lda, \n",
+    "                                        target_names=category_labels, \n",
+    "                                        output_dict=True)\n",
+    "\n",
+    "# Display metrics for each class\n",
+    "lda_metrics_df = pd.DataFrame({\n",
+    "    'Class': category_labels,\n",
+    "    'Precision': [class_report_lda[label]['precision'] for label in category_labels],\n",
+    "    'Recall': [class_report_lda[label]['recall'] for label in category_labels],\n",
+    "    'F1-Score': [class_report_lda[label]['f1-score'] for label in category_labels],\n",
+    "    'Support': [class_report_lda[label]['support'] for label in category_labels]\n",
+    "})\n",
+    "\n",
+    "print(f\"\\nLDA Classification Metrics:\")\n",
+    "display(lda_metrics_df.round(4))\n",
+    "\n",
+    "# Confusion matrix\n",
+    "cm_lda = confusion_matrix(y_test_lda, y_pred_lda)\n",
+    "cm_lda_df = pd.DataFrame(cm_lda, index=category_labels, columns=category_labels)\n",
+    "\n",
+    "print(f\"\\nLDA Confusion Matrix:\")\n",
+    "display(cm_lda_df)\n",
+    "\n",
+    "# Visualize confusion matrix\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(cm_lda_df, annot=True, fmt='d', cmap='Blues', cbar=True)\n",
+    "plt.title('LDA Classification - Confusion Matrix', fontsize=14, fontweight='bold')\n",
+    "plt.xlabel('Predicted Class')\n",
+    "plt.ylabel('True Class')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 7. LDA Feature Analysis\n",
+    "print(\"\\n7. LDA FEATURE ANALYSIS\")\n",
+    "print(\"=\" * 30)\n",
+    "\n",
+    "# Analyze discriminant coefficients\n",
+    "lda_coefficients = pd.DataFrame(\n",
+    "    lda_classifier.scalings_,\n",
+    "    index=X_scaled.columns,\n",
+    "    columns=[f'LD{i+1}' for i in range(lda_classifier.scalings_.shape[1])]\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nLDA Discriminant Coefficients (Top 10 by LD1):\")\n",
+    "ld1_importance = lda_coefficients['LD1'].abs().sort_values(ascending=False)\n",
+    "display(lda_coefficients.loc[ld1_importance.head(10).index].round(4))\n",
+    "\n",
+    "# Feature interpretation\n",
+    "print(f\"\\nFeature Interpretation for LD1:\")\n",
+    "top_positive = lda_coefficients['LD1'].nlargest(3)\n",
+    "top_negative = lda_coefficients['LD1'].nsmallest(3)\n",
+    "\n",
+    "print(f\"   Features that increase LD1 (towards higher price category):\")\n",
+    "for feature, coef in top_positive.items():\n",
+    "    print(f\"     {feature}: {coef:.4f}\")\n",
+    "\n",
+    "print(f\"   Features that decrease LD1 (towards lower price category):\")\n",
+    "for feature, coef in top_negative.items():\n",
+    "    print(f\"     {feature}: {coef:.4f}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"LINEAR DISCRIMINANT ANALYSIS (LDA) COMPLETED\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\nKey Achievements:\")\n",
+    "print(f\"- Applied supervised dimensionality reduction with {n_components_lda} discriminants\")\n",
+    "print(f\"- Achieved {lda_cumulative_variance[-1]*100:.2f}% variance explanation\")\n",
+    "print(f\"- Optimized class separation with Fisher's criterion: {fishers_criterion:.4f}\")\n",
+    "print(f\"- Achieved classification accuracy: {accuracy_lda*100:.2f}%\")\n",
+    "print(\"- Analyzed discriminant coefficients for feature importance\")\n",
+    "print(\"- Compared LDA with PCA for dimensionality reduction\")"
+   ]
   }
  ],
  "metadata": {
