--- a/notebooks/airbnb_data_analysis.ipynb
+++ b/notebooks/airbnb_data_analysis.ipynb
@@ -5803,6 +5803,439 @@
     "print(\"- Analyzed discriminant coefficients for feature importance\")\n",
     "print(\"- Compared LDA with PCA for dimensionality reduction\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 15. Machine Learning Models - Price Prediction\n",
+    "Comprehensive machine learning pipeline with multiple algorithms, hyperparameter tuning, and model comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TOPIC: Machine Learning Models - Price Prediction\n",
+    "print(\"COMPREHENSIVE MACHINE LEARNING MODELS - PRICE PREDICTION\")\n",
+    "print(\"=\" * 65)\n",
+    "\n",
+    "# Import additional ML libraries\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, AdaBoostRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "import time\n",
+    "\n",
+    "# Use the prepared train/test data from feature engineering section\n",
+    "print(f\"Using prepared datasets for ML models:\")\n",
+    "print(f\"   Training set: {X_train.shape}\")\n",
+    "print(f\"   Test set: {X_test.shape}\")\n",
+    "print(f\"   Target variable: price (continuous regression)\")\n",
+    "\n",
+    "# 1. Model Selection and Initialization\n",
+    "print(\"\\n1. MODEL SELECTION AND INITIALIZATION\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Initialize multiple regression models\n",
+    "models = {\n",
+    "    'Linear Regression': LinearRegression(),\n",
+    "    'Random Forest': RandomForestRegressor(random_state=42),\n",
+    "    'Gradient Boosting': GradientBoostingRegressor(random_state=42),\n",
+    "    'Support Vector Regression': SVR(),\n",
+    "    'K-Nearest Neighbors': KNeighborsRegressor(),\n",
+    "    'Decision Tree': DecisionTreeRegressor(random_state=42),\n",
+    "    'AdaBoost': AdaBoostRegressor(random_state=42)\n",
+    "}\n",
+    "\n",
+    "print(f\"\\nInitialized {len(models)} regression models:\")\n",
+    "for i, (name, model) in enumerate(models.items(), 1):\n",
+    "    print(f\"   {i}. {name}: {type(model).__name__}\")\n",
+    "\n",
+    "# 2. Baseline Model Training and Evaluation\n",
+    "print(\"\\n2. BASELINE MODEL TRAINING AND EVALUATION\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Store results for comparison\n",
+    "model_results = {}\n",
+    "training_times = {}\n",
+    "\n",
+    "print(\"\\nTraining baseline models...\")\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    print(f\"\\nTraining {name}...\")\n",
+    "    \n",
+    "    # Time the training\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    try:\n",
+    "        # Train the model\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Make predictions\n",
+    "        y_pred_train = model.predict(X_train)\n",
+    "        y_pred_test = model.predict(X_test)\n",
+    "        \n",
+    "        # Calculate metrics\n",
+    "        train_r2 = r2_score(y_train, y_pred_train)\n",
+    "        test_r2 = r2_score(y_test, y_pred_test)\n",
+    "        train_mae = mean_absolute_error(y_train, y_pred_train)\n",
+    "        test_mae = mean_absolute_error(y_test, y_pred_test)\n",
+    "        train_rmse = np.sqrt(mean_squared_error(y_train, y_pred_train))\n",
+    "        test_rmse = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
+    "        \n",
+    "        # Store results\n",
+    "        model_results[name] = {\n",
+    "            'model': model,\n",
+    "            'train_r2': train_r2,\n",
+    "            'test_r2': test_r2,\n",
+    "            'train_mae': train_mae,\n",
+    "            'test_mae': test_mae,\n",
+    "            'train_rmse': train_rmse,\n",
+    "            'test_rmse': test_rmse,\n",
+    "            'overfitting': train_r2 - test_r2\n",
+    "        }\n",
+    "        \n",
+    "        training_time = time.time() - start_time\n",
+    "        training_times[name] = training_time\n",
+    "        \n",
+    "        print(f\"   Training completed in {training_time:.3f} seconds\")\n",
+    "        print(f\"   Test R²: {test_r2:.4f}, Test MAE: ${test_mae:.2f}, Test RMSE: ${test_rmse:.2f}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"   Error training {name}: {str(e)}\")\n",
+    "        continue\n",
+    "\n",
+    "# 3. Model Performance Comparison\n",
+    "print(\"\\n3. MODEL PERFORMANCE COMPARISON\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Create comparison DataFrame\n",
+    "comparison_data = []\n",
+    "for name, results in model_results.items():\n",
+    "    comparison_data.append({\n",
+    "        'Model': name,\n",
+    "        'Train_R2': results['train_r2'],\n",
+    "        'Test_R2': results['test_r2'],\n",
+    "        'Test_MAE': results['test_mae'],\n",
+    "        'Test_RMSE': results['test_rmse'],\n",
+    "        'Overfitting': results['overfitting'],\n",
+    "        'Training_Time': training_times[name]\n",
+    "    })\n",
+    "\n",
+    "comparison_df = pd.DataFrame(comparison_data)\n",
+    "comparison_df = comparison_df.sort_values('Test_R2', ascending=False)\n",
+    "\n",
+    "print(\"\\nModel Performance Comparison:\")\n",
+    "display(comparison_df.round(4))\n",
+    "\n",
+    "# Identify best performing models\n",
+    "best_model_name = comparison_df.iloc[0]['Model']\n",
+    "best_r2 = comparison_df.iloc[0]['Test_R2']\n",
+    "print(f\"\\nBest performing model: {best_model_name} (R² = {best_r2:.4f})\")\n",
+    "\n",
+    "# 4. Model Performance Visualization\n",
+    "print(\"\\n4. MODEL PERFORMANCE VISUALIZATION\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Create comprehensive model comparison dashboard\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+    "fig.suptitle('Machine Learning Models Performance Dashboard', fontsize=16, fontweight='bold')\n",
+    "\n",
+    "# 4.1 R² Score Comparison\n",
+    "x_pos = np.arange(len(comparison_df))\n",
+    "width = 0.35\n",
+    "\n",
+    "axes[0,0].bar(x_pos - width/2, comparison_df['Train_R2'], width, \n",
+    "             label='Train R²', alpha=0.8, color='skyblue')\n",
+    "axes[0,0].bar(x_pos + width/2, comparison_df['Test_R2'], width, \n",
+    "             label='Test R²', alpha=0.8, color='lightcoral')\n",
+    "axes[0,0].set_title('R² Score Comparison')\n",
+    "axes[0,0].set_xlabel('Models')\n",
+    "axes[0,0].set_ylabel('R² Score')\n",
+    "axes[0,0].set_xticks(x_pos)\n",
+    "axes[0,0].set_xticklabels(comparison_df['Model'], rotation=45, ha='right')\n",
+    "axes[0,0].legend()\n",
+    "axes[0,0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.2 MAE Comparison\n",
+    "axes[0,1].bar(comparison_df['Model'], comparison_df['Test_MAE'], \n",
+    "             color='lightgreen', alpha=0.8)\n",
+    "axes[0,1].set_title('Mean Absolute Error (Test Set)')\n",
+    "axes[0,1].set_xlabel('Models')\n",
+    "axes[0,1].set_ylabel('MAE ($)')\n",
+    "axes[0,1].tick_params(axis='x', rotation=45)\n",
+    "axes[0,1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.3 RMSE Comparison\n",
+    "axes[0,2].bar(comparison_df['Model'], comparison_df['Test_RMSE'], \n",
+    "             color='gold', alpha=0.8)\n",
+    "axes[0,2].set_title('Root Mean Squared Error (Test Set)')\n",
+    "axes[0,2].set_xlabel('Models')\n",
+    "axes[0,2].set_ylabel('RMSE ($)')\n",
+    "axes[0,2].tick_params(axis='x', rotation=45)\n",
+    "axes[0,2].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.4 Overfitting Analysis\n",
+    "colors = ['red' if x > 0.1 else 'orange' if x > 0.05 else 'green' for x in comparison_df['Overfitting']]\n",
+    "axes[1,0].bar(comparison_df['Model'], comparison_df['Overfitting'], \n",
+    "             color=colors, alpha=0.8)\n",
+    "axes[1,0].set_title('Overfitting Analysis (Train R² - Test R²)')\n",
+    "axes[1,0].set_xlabel('Models')\n",
+    "axes[1,0].set_ylabel('Overfitting Score')\n",
+    "axes[1,0].tick_params(axis='x', rotation=45)\n",
+    "axes[1,0].axhline(y=0.05, color='orange', linestyle='--', alpha=0.7, label='Moderate')\n",
+    "axes[1,0].axhline(y=0.1, color='red', linestyle='--', alpha=0.7, label='High')\n",
+    "axes[1,0].legend()\n",
+    "axes[1,0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.5 Training Time Comparison\n",
+    "axes[1,1].bar(comparison_df['Model'], comparison_df['Training_Time'], \n",
+    "             color='purple', alpha=0.8)\n",
+    "axes[1,1].set_title('Training Time Comparison')\n",
+    "axes[1,1].set_xlabel('Models')\n",
+    "axes[1,1].set_ylabel('Training Time (seconds)')\n",
+    "axes[1,1].tick_params(axis='x', rotation=45)\n",
+    "axes[1,1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4.6 Actual vs Predicted for Best Model\n",
+    "best_model = model_results[best_model_name]['model']\n",
+    "y_pred_best = best_model.predict(X_test)\n",
+    "\n",
+    "axes[1,2].scatter(y_test, y_pred_best, alpha=0.6, s=30)\n",
+    "axes[1,2].plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], \n",
+    "              'r--', linewidth=2, label='Perfect Prediction')\n",
+    "axes[1,2].set_title(f'Actual vs Predicted: {best_model_name}')\n",
+    "axes[1,2].set_xlabel('Actual Price ($)')\n",
+    "axes[1,2].set_ylabel('Predicted Price ($)')\n",
+    "axes[1,2].legend()\n",
+    "axes[1,2].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 5. Hyperparameter Tuning for Best Models\n",
+    "print(\"\\n5. HYPERPARAMETER TUNING FOR BEST MODELS\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Select top 3 models for hyperparameter tuning\n",
+    "top_models = comparison_df.head(3)['Model'].tolist()\n",
+    "print(f\"\\nPerforming hyperparameter tuning for top 3 models: {top_models}\")\n",
+    "\n",
+    "# Define parameter grids\n",
+    "param_grids = {\n",
+    "    'Random Forest': {\n",
+    "        'n_estimators': [50, 100, 200],\n",
+    "        'max_depth': [10, 20, None],\n",
+    "        'min_samples_split': [2, 5, 10]\n",
+    "    },\n",
+    "    'Gradient Boosting': {\n",
+    "        'n_estimators': [50, 100, 200],\n",
+    "        'learning_rate': [0.05, 0.1, 0.2],\n",
+    "        'max_depth': [3, 5, 7]\n",
+    "    },\n",
+    "    'Support Vector Regression': {\n",
+    "        'C': [0.1, 1, 10],\n",
+    "        'gamma': ['scale', 'auto', 0.001],\n",
+    "        'kernel': ['rbf', 'linear']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "tuned_models = {}\n",
+    "\n",
+    "for model_name in top_models:\n",
+    "    if model_name in param_grids:\n",
+    "        print(f\"\\nTuning {model_name}...\")\n",
+    "        \n",
+    "        # Get base model\n",
+    "        base_model = models[model_name]\n",
+    "        \n",
+    "        # Perform grid search\n",
+    "        grid_search = GridSearchCV(\n",
+    "            base_model, \n",
+    "            param_grids[model_name], \n",
+    "            cv=3, \n",
+    "            scoring='r2', \n",
+    "            n_jobs=-1,\n",
+    "            verbose=0\n",
+    "        )\n",
+    "        \n",
+    "        try:\n",
+    "            grid_search.fit(X_train, y_train)\n",
+    "            \n",
+    "            # Get best model\n",
+    "            best_model_tuned = grid_search.best_estimator_\n",
+    "            \n",
+    "            # Evaluate tuned model\n",
+    "            y_pred_tuned = best_model_tuned.predict(X_test)\n",
+    "            tuned_r2 = r2_score(y_test, y_pred_tuned)\n",
+    "            tuned_mae = mean_absolute_error(y_test, y_pred_tuned)\n",
+    "            tuned_rmse = np.sqrt(mean_squared_error(y_test, y_pred_tuned))\n",
+    "            \n",
+    "            tuned_models[model_name] = {\n",
+    "                'model': best_model_tuned,\n",
+    "                'best_params': grid_search.best_params_,\n",
+    "                'best_score': grid_search.best_score_,\n",
+    "                'test_r2': tuned_r2,\n",
+    "                'test_mae': tuned_mae,\n",
+    "                'test_rmse': tuned_rmse\n",
+    "            }\n",
+    "            \n",
+    "            print(f\"   Best parameters: {grid_search.best_params_}\")\n",
+    "            print(f\"   CV Score: {grid_search.best_score_:.4f}\")\n",
+    "            print(f\"   Test R²: {tuned_r2:.4f} (improvement: {tuned_r2 - model_results[model_name]['test_r2']:.4f})\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"   Error tuning {model_name}: {str(e)}\")\n",
+    "            continue\n",
+    "\n",
+    "# 6. Cross-Validation Analysis\n",
+    "print(\"\\n6. CROSS-VALIDATION ANALYSIS\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "# Perform cross-validation for top models\n",
+    "cv_results = {}\n",
+    "\n",
+    "print(\"\\nPerforming 5-fold cross-validation...\")\n",
+    "\n",
+    "for model_name in top_models[:3]:  # Top 3 models\n",
+    "    if model_name in model_results:\n",
+    "        model = model_results[model_name]['model']\n",
+    "        \n",
+    "        try:\n",
+    "            # Perform cross-validation\n",
+    "            cv_scores = cross_val_score(model, X_train, y_train, cv=5, scoring='r2')\n",
+    "            \n",
+    "            cv_results[model_name] = {\n",
+    "                'mean_cv_score': cv_scores.mean(),\n",
+    "                'std_cv_score': cv_scores.std(),\n",
+    "                'cv_scores': cv_scores\n",
+    "            }\n",
+    "            \n",
+    "            print(f\"\\n{model_name}:\")\n",
+    "            print(f\"   CV R² Mean: {cv_scores.mean():.4f} (±{cv_scores.std()*2:.4f})\")\n",
+    "            print(f\"   CV R² Range: [{cv_scores.min():.4f}, {cv_scores.max():.4f}]\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"   Error in CV for {model_name}: {str(e)}\")\n",
+    "            continue\n",
+    "\n",
+    "# 7. Feature Importance Analysis\n",
+    "print(\"\\n7. FEATURE IMPORTANCE ANALYSIS\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Analyze feature importance for tree-based models\n",
+    "tree_based_models = ['Random Forest', 'Gradient Boosting', 'Decision Tree']\n",
+    "\n",
+    "for model_name in tree_based_models:\n",
+    "    if model_name in model_results:\n",
+    "        model = model_results[model_name]['model']\n",
+    "        \n",
+    "        if hasattr(model, 'feature_importances_'):\n",
+    "            print(f\"\\nFeature Importance - {model_name}:\")\n",
+    "            \n",
+    "            # Get feature importances\n",
+    "            importances = model.feature_importances_\n",
+    "            feature_names = X_train.columns\n",
+    "            \n",
+    "            # Create importance DataFrame\n",
+    "            importance_df = pd.DataFrame({\n",
+    "                'Feature': feature_names,\n",
+    "                'Importance': importances\n",
+    "            }).sort_values('Importance', ascending=False)\n",
+    "            \n",
+    "            # Display top 10 features\n",
+    "            print(f\"   Top 10 Most Important Features:\")\n",
+    "            for i, (_, row) in enumerate(importance_df.head(10).iterrows(), 1):\n",
+    "                print(f\"     {i:2d}. {row['Feature']:<30} {row['Importance']:.4f}\")\n",
+    "            \n",
+    "            # Visualize feature importance for best model\n",
+    "            if model_name == best_model_name:\n",
+    "                plt.figure(figsize=(12, 8))\n",
+    "                top_features = importance_df.head(15)\n",
+    "                plt.barh(range(len(top_features)), top_features['Importance'], color='steelblue', alpha=0.8)\n",
+    "                plt.yticks(range(len(top_features)), top_features['Feature'])\n",
+    "                plt.xlabel('Feature Importance')\n",
+    "                plt.title(f'Top 15 Feature Importances - {model_name}', fontsize=14, fontweight='bold')\n",
+    "                plt.grid(True, alpha=0.3)\n",
+    "                plt.tight_layout()\n",
+    "                plt.show()\n",
+    "\n",
+    "# 8. Model Ensemble and Final Evaluation\n",
+    "print(\"\\n8. MODEL ENSEMBLE AND FINAL EVALUATION\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Create simple ensemble of top 3 models\n",
+    "print(\"\\nCreating ensemble of top 3 models...\")\n",
+    "\n",
+    "ensemble_predictions = []\n",
+    "ensemble_models = []\n",
+    "\n",
+    "for model_name in top_models[:3]:\n",
+    "    if model_name in model_results:\n",
+    "        model = model_results[model_name]['model']\n",
+    "        pred = model.predict(X_test)\n",
+    "        ensemble_predictions.append(pred)\n",
+    "        ensemble_models.append(model_name)\n",
+    "\n",
+    "if ensemble_predictions:\n",
+    "    # Simple average ensemble\n",
+    "    ensemble_pred = np.mean(ensemble_predictions, axis=0)\n",
+    "    \n",
+    "    # Evaluate ensemble\n",
+    "    ensemble_r2 = r2_score(y_test, ensemble_pred)\n",
+    "    ensemble_mae = mean_absolute_error(y_test, ensemble_pred)\n",
+    "    ensemble_rmse = np.sqrt(mean_squared_error(y_test, ensemble_pred))\n",
+    "    \n",
+    "    print(f\"\\nEnsemble Results (Average of {len(ensemble_models)} models):\")\n",
+    "    print(f\"   Models: {', '.join(ensemble_models)}\")\n",
+    "    print(f\"   Ensemble R²: {ensemble_r2:.4f}\")\n",
+    "    print(f\"   Ensemble MAE: ${ensemble_mae:.2f}\")\n",
+    "    print(f\"   Ensemble RMSE: ${ensemble_rmse:.2f}\")\n",
+    "    \n",
+    "    # Compare with best individual model\n",
+    "    best_individual_r2 = model_results[best_model_name]['test_r2']\n",
+    "    improvement = ensemble_r2 - best_individual_r2\n",
+    "    print(f\"   Improvement over best individual: {improvement:.4f}\")\n",
+    "\n",
+    "# 9. Final Model Summary\n",
+    "print(\"\\n9. FINAL MODEL SUMMARY\")\n",
+    "print(\"=\" * 30)\n",
+    "\n",
+    "# Create final summary\n",
+    "final_summary = pd.DataFrame({\n",
+    "    'Metric': ['Best Individual Model', 'Best R² Score', 'Best MAE', 'Best RMSE', \n",
+    "              'Ensemble R² Score', 'Total Models Tested', 'Best Training Time'],\n",
+    "    'Value': [\n",
+    "        best_model_name,\n",
+    "        f\"{best_r2:.4f}\",\n",
+    "        f\"${comparison_df.iloc[0]['Test_MAE']:.2f}\",\n",
+    "        f\"${comparison_df.iloc[0]['Test_RMSE']:.2f}\",\n",
+    "        f\"{ensemble_r2:.4f}\" if 'ensemble_r2' in locals() else 'N/A',\n",
+    "        len(models),\n",
+    "        f\"{comparison_df.iloc[0]['Training_Time']:.3f}s\"\n",
+    "    ]\n",
+    "})\n",
+    "\n",
+    "print(\"\\nFinal Model Performance Summary:\")\n",
+    "display(final_summary)\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"MACHINE LEARNING MODELS - PRICE PREDICTION COMPLETED\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\nKey Achievements:\")\n",
+    "print(f\"- Trained and evaluated {len(models)} different ML algorithms\")\n",
+    "print(f\"- Best model: {best_model_name} with R² = {best_r2:.4f}\")\n",
+    "print(\"- Performed hyperparameter tuning for top models\")\n",
+    "print(\"- Conducted comprehensive cross-validation analysis\")\n",
+    "print(\"- Analyzed feature importance for interpretability\")\n",
+    "print(\"- Created ensemble model for improved performance\")"
+   ]
   }
  ],
  "metadata": {
