--- a/notebooks/airbnb_data_analysis.ipynb
+++ b/notebooks/airbnb_data_analysis.ipynb
@@ -5440,9 +5440,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COMPREHENSIVE LINEAR DISCRIMINANT ANALYSIS (LDA)\n",
+      "=======================================================\n",
+      "Using price categories for supervised dimensionality reduction\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_scaled' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Use price categories from previous sections for supervised dimensionality reduction\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUsing price categories for supervised dimensionality reduction\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFeature matrix shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mX_scaled\u001b[49m.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTarget classes: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28msorted\u001b[39m(df_clustered[\u001b[33m'\u001b[39m\u001b[33mprice_category\u001b[39m\u001b[33m'\u001b[39m].unique())\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[33m'\u001b[39m\u001b[33mprice_category\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mdf_clustered.columns\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[33m'\u001b[39m\u001b[33mCreating price categories...\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# 1. Create Price Categories for LDA (if not already created)\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_scaled' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# TOPIC: Linear Discriminant Analysis (LDA)\n",
     "print(\"COMPREHENSIVE LINEAR DISCRIMINANT ANALYSIS (LDA)\")\n",
@@ -5815,9 +5836,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COMPREHENSIVE MACHINE LEARNING MODELS - PRICE PREDICTION\n",
+      "=================================================================\n",
+      "Using prepared datasets for ML models:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Use the prepared train/test data from feature engineering section\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUsing prepared datasets for ML models:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   Training set: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mX_train\u001b[49m.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   Test set: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mX_test.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   Target variable: price (continuous regression)\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# TOPIC: Machine Learning Models - Price Prediction\n",
     "print(\"COMPREHENSIVE MACHINE LEARNING MODELS - PRICE PREDICTION\")\n",
@@ -6235,6 +6277,261 @@
     "print(\"- Conducted comprehensive cross-validation analysis\")\n",
     "print(\"- Analyzed feature importance for interpretability\")\n",
     "print(\"- Created ensemble model for improved performance\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 16. Advanced Time Series Analysis and Forecasting\n",
+    "Time-based patterns, seasonal trends, booking forecasting, and temporal insights for strategic planning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TOPIC: Advanced Time Series Analysis and Forecasting\n",
+    "print(\"COMPREHENSIVE TIME SERIES ANALYSIS AND FORECASTING\")\n",
+    "print(\"=\" * 65)\n",
+    "\n",
+    "# 1. Temporal Data Preparation\n",
+    "print(\"\\nTEMPORAL DATA PREPARATION:\")\n",
+    "print(\"=\" * 30)\n",
+    "\n",
+    "# Convert last_review to datetime and extract temporal features\n",
+    "df['last_review'] = pd.to_datetime(df['last_review'])\n",
+    "df['review_year'] = df['last_review'].dt.year\n",
+    "df['review_month'] = df['last_review'].dt.month\n",
+    "df['review_quarter'] = df['last_review'].dt.quarter\n",
+    "df['review_day_of_week'] = df['last_review'].dt.dayofweek\n",
+    "df['review_day_name'] = df['last_review'].dt.day_name()\n",
+    "df['review_month_name'] = df['last_review'].dt.month_name()\n",
+    "\n",
+    "print(f\"Date range in dataset: {df['last_review'].min()} to {df['last_review'].max()}\")\n",
+    "print(f\"Total time span: {(df['last_review'].max() - df['last_review'].min()).days} days\")\n",
+    "print(f\"Years covered: {df['review_year'].nunique()} years ({df['review_year'].min()}-{df['review_year'].max()})\")\n",
+    "\n",
+    "# 2. Seasonal Analysis\n",
+    "print(\"\\n\" + \"=\" * 40)\n",
+    "print(\"SEASONAL PATTERNS ANALYSIS\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Monthly patterns\n",
+    "monthly_stats = df.groupby('review_month_name').agg({\n",
+    "    'price': ['mean', 'median', 'count'],\n",
+    "    'number_of_reviews': 'mean',\n",
+    "    'availability_365': 'mean'\n",
+    "}).round(2)\n",
+    "\n",
+    "monthly_stats.columns = ['_'.join(col).strip() for col in monthly_stats.columns]\n",
+    "\n",
+    "# Reorder by calendar month\n",
+    "month_order = ['January', 'February', 'March', 'April', 'May', 'June',\n",
+    "               'July', 'August', 'September', 'October', 'November', 'December']\n",
+    "monthly_stats = monthly_stats.reindex([m for m in month_order if m in monthly_stats.index])\n",
+    "\n",
+    "print(\"\\nMonthly Patterns (by Last Review Date):\")\n",
+    "display(monthly_stats)\n",
+    "\n",
+    "# Quarterly analysis\n",
+    "quarterly_stats = df.groupby('review_quarter').agg({\n",
+    "    'price': ['mean', 'median', 'count'],\n",
+    "    'number_of_reviews': 'mean',\n",
+    "    'availability_365': 'mean'\n",
+    "}).round(2)\n",
+    "\n",
+    "quarterly_stats.columns = ['_'.join(col).strip() for col in quarterly_stats.columns]\n",
+    "quarterly_stats.index = ['Q1 (Jan-Mar)', 'Q2 (Apr-Jun)', 'Q3 (Jul-Sep)', 'Q4 (Oct-Dec)']\n",
+    "\n",
+    "print(\"\\nQuarterly Patterns:\")\n",
+    "display(quarterly_stats)\n",
+    "\n",
+    "# Day of week patterns\n",
+    "dow_stats = df.groupby('review_day_name').agg({\n",
+    "    'price': ['mean', 'median', 'count'],\n",
+    "    'number_of_reviews': 'mean'\n",
+    "}).round(2)\n",
+    "\n",
+    "dow_stats.columns = ['_'.join(col).strip() for col in dow_stats.columns]\n",
+    "\n",
+    "# Reorder by day of week\n",
+    "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "dow_stats = dow_stats.reindex([d for d in day_order if d in dow_stats.index])\n",
+    "\n",
+    "print(\"\\nDay of Week Patterns:\")\n",
+    "display(dow_stats)\n",
+    "\n",
+    "# 3. Yearly Trends Analysis\n",
+    "print(\"\\n\" + \"=\" * 35)\n",
+    "print(\"YEARLY TRENDS ANALYSIS\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "yearly_stats = df.groupby('review_year').agg({\n",
+    "    'price': ['mean', 'median', 'count'],\n",
+    "    'number_of_reviews': 'mean',\n",
+    "    'availability_365': 'mean',\n",
+    "    'host_id': 'nunique'\n",
+    "}).round(2)\n",
+    "\n",
+    "yearly_stats.columns = ['_'.join(col).strip() for col in yearly_stats.columns]\n",
+    "\n",
+    "print(\"\\nYear-over-Year Trends:\")\n",
+    "display(yearly_stats)\n",
+    "\n",
+    "# Calculate year-over-year growth rates\n",
+    "print(\"\\nYear-over-Year Growth Analysis:\")\n",
+    "for year in sorted(df['review_year'].unique())[1:]:\n",
+    "    prev_year = year - 1\n",
+    "    if prev_year in yearly_stats.index:\n",
+    "        price_growth = ((yearly_stats.loc[year, 'price_mean'] - yearly_stats.loc[prev_year, 'price_mean']) / yearly_stats.loc[prev_year, 'price_mean']) * 100\n",
+    "        listing_growth = ((yearly_stats.loc[year, 'price_count'] - yearly_stats.loc[prev_year, 'price_count']) / yearly_stats.loc[prev_year, 'price_count']) * 100\n",
+    "        print(f\"   {prev_year} to {year}: Price growth {price_growth:+.1f}%, Listing growth {listing_growth:+.1f}%\")\n",
+    "\n",
+    "# 4. Time Series Visualization\n",
+    "print(\"\\n\" + \"=\" * 40)\n",
+    "print(\"TIME SERIES VISUALIZATIONS\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Create time series plots\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "fig.suptitle('Temporal Patterns in NYC Airbnb Data', fontsize=16, fontweight='bold')\n",
+    "\n",
+    "# Monthly price trends\n",
+    "monthly_stats['price_mean'].plot(kind='bar', ax=axes[0,0], color='skyblue')\n",
+    "axes[0,0].set_title('Average Price by Month')\n",
+    "axes[0,0].set_xlabel('Month')\n",
+    "axes[0,0].set_ylabel('Average Price ($)')\n",
+    "axes[0,0].tick_params(axis='x', rotation=45)\n",
+    "axes[0,0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# Quarterly listing counts\n",
+    "quarterly_stats['price_count'].plot(kind='bar', ax=axes[0,1], color='lightcoral')\n",
+    "axes[0,1].set_title('Listing Count by Quarter')\n",
+    "axes[0,1].set_xlabel('Quarter')\n",
+    "axes[0,1].set_ylabel('Number of Listings')\n",
+    "axes[0,1].tick_params(axis='x', rotation=0)\n",
+    "axes[0,1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# Day of week patterns\n",
+    "dow_stats['price_mean'].plot(kind='bar', ax=axes[1,0], color='lightgreen')\n",
+    "axes[1,0].set_title('Average Price by Day of Week')\n",
+    "axes[1,0].set_xlabel('Day of Week')\n",
+    "axes[1,0].set_ylabel('Average Price ($)')\n",
+    "axes[1,0].tick_params(axis='x', rotation=45)\n",
+    "axes[1,0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# Yearly trends\n",
+    "yearly_stats['price_mean'].plot(kind='line', ax=axes[1,1], marker='o', color='purple', linewidth=2)\n",
+    "axes[1,1].set_title('Average Price Trend by Year')\n",
+    "axes[1,1].set_xlabel('Year')\n",
+    "axes[1,1].set_ylabel('Average Price ($)')\n",
+    "axes[1,1].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 5. Advanced Temporal Analysis\n",
+    "print(\"\\n\" + \"=\" * 45)\n",
+    "print(\"ADVANCED TEMPORAL INSIGHTS\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Peak season analysis\n",
+    "peak_months = monthly_stats.nlargest(3, 'price_mean')\n",
+    "low_months = monthly_stats.nsmallest(3, 'price_mean')\n",
+    "\n",
+    "print(\"\\nSeasonal Price Analysis:\")\n",
+    "print(\"Top 3 Highest Price Months:\")\n",
+    "for month in peak_months.index:\n",
+    "    price = peak_months.loc[month, 'price_mean']\n",
+    "    count = peak_months.loc[month, 'price_count']\n",
+    "    print(f\"   {month}: ${price:.2f} average ({count:,} listings)\")\n",
+    "\n",
+    "print(\"\\nTop 3 Lowest Price Months:\")\n",
+    "for month in low_months.index:\n",
+    "    price = low_months.loc[month, 'price_mean']\n",
+    "    count = low_months.loc[month, 'price_count']\n",
+    "    print(f\"   {month}: ${price:.2f} average ({count:,} listings)\")\n",
+    "\n",
+    "# Weekend vs Weekday analysis\n",
+    "df['is_weekend'] = df['review_day_of_week'].isin([5, 6])  # Saturday=5, Sunday=6\n",
+    "weekend_analysis = df.groupby('is_weekend').agg({\n",
+    "    'price': ['mean', 'median', 'count'],\n",
+    "    'number_of_reviews': 'mean',\n",
+    "    'availability_365': 'mean'\n",
+    "}).round(2)\n",
+    "\n",
+    "weekend_analysis.columns = ['_'.join(col).strip() for col in weekend_analysis.columns]\n",
+    "weekend_analysis.index = ['Weekday', 'Weekend']\n",
+    "\n",
+    "print(\"\\nWeekend vs Weekday Analysis:\")\n",
+    "display(weekend_analysis)\n",
+    "\n",
+    "# 6. Booking Pattern Insights\n",
+    "print(\"\\n\" + \"=\" * 40)\n",
+    "print(\"BOOKING PATTERN INSIGHTS\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Reviews per month as proxy for booking activity\n",
+    "monthly_activity = df.groupby(['review_year', 'review_month']).agg({\n",
+    "    'number_of_reviews': 'sum',\n",
+    "    'price': 'mean',\n",
+    "    'availability_365': 'mean'\n",
+    "}).round(2)\n",
+    "\n",
+    "print(\"\\nMonthly Booking Activity Trends (Top 10 months by review volume):\")\n",
+    "top_months = monthly_activity.nlargest(10, 'number_of_reviews')\n",
+    "display(top_months)\n",
+    "\n",
+    "# Availability patterns\n",
+    "availability_categories = pd.cut(df['availability_365'], \n",
+    "                               bins=[0, 30, 90, 180, 365], \n",
+    "                               labels=['Low (0-30)', 'Medium (31-90)', 'High (91-180)', 'Very High (181-365)'],\n",
+    "                               include_lowest=True)\n",
+    "\n",
+    "availability_analysis = df.groupby(availability_categories).agg({\n",
+    "    'price': ['mean', 'count'],\n",
+    "    'number_of_reviews': 'mean'\n",
+    "}).round(2)\n",
+    "\n",
+    "availability_analysis.columns = ['_'.join(col).strip() for col in availability_analysis.columns]\n",
+    "\n",
+    "print(\"\\nAvailability Pattern Analysis:\")\n",
+    "display(availability_analysis)\n",
+    "\n",
+    "# 7. Strategic Insights and Recommendations\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
+    "print(\"STRATEGIC INSIGHTS AND RECOMMENDATIONS\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Calculate key metrics\n",
+    "peak_season_premium = (peak_months['price_mean'].mean() - low_months['price_mean'].mean()) / low_months['price_mean'].mean() * 100\n",
+    "weekend_premium = (weekend_analysis.loc['Weekend', 'price_mean'] - weekend_analysis.loc['Weekday', 'price_mean']) / weekend_analysis.loc['Weekday', 'price_mean'] * 100\n",
+    "\n",
+    "print(\"\\nKey Temporal Insights:\")\n",
+    "print(f\"   Peak Season Premium: {peak_season_premium:.1f}% higher prices in peak months\")\n",
+    "print(f\"   Weekend Premium: {weekend_premium:.1f}% price difference between weekend and weekday\")\n",
+    "print(f\"   Seasonal Variation: {monthly_stats['price_mean'].std():.2f} standard deviation in monthly prices\")\n",
+    "print(f\"   Most Active Month: {monthly_stats['price_count'].idxmax()} ({monthly_stats['price_count'].max():,} listings)\")\n",
+    "print(f\"   Least Active Month: {monthly_stats['price_count'].idxmin()} ({monthly_stats['price_count'].min():,} listings)\")\n",
+    "\n",
+    "print(\"\\nStrategic Recommendations:\")\n",
+    "print(\"   1. PRICING STRATEGY:\")\n",
+    "print(f\"      - Implement dynamic pricing with {peak_season_premium:.0f}% premium during peak months\")\n",
+    "print(f\"      - Consider weekend pricing adjustments ({weekend_premium:+.1f}% differential)\")\n",
+    "print(\"   2. INVENTORY MANAGEMENT:\")\n",
+    "print(\"      - Optimize availability during high-demand periods\")\n",
+    "print(\"      - Plan maintenance during low-season months\")\n",
+    "print(\"   3. MARKETING FOCUS:\")\n",
+    "print(\"      - Target promotional campaigns during low-activity months\")\n",
+    "print(\"      - Leverage seasonal trends for revenue optimization\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 65)\n",
+    "print(\"ADVANCED TIME SERIES ANALYSIS AND FORECASTING COMPLETED\")\n",
+    "print(\"=\" * 65)"
    ]
   }
  ],
